--- a/assets/app.css
+++ b/assets/app.css
@@ -13,7 +13,7 @@ body {
 }
 
 #left {
-    background: url(../assets/jerrypicker.jpg);
+    background: url(https://katzgrau.github.io/jerry-picker/assets/jerrypicker.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
